fixed level and jump

--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,7 @@ a {
     height: auto;
     margin: 10px auto;
     display: none;
+    image-rendering: pixelated;
 }
 
 #start-button {
@@ -260,6 +261,7 @@ a {
     height: auto;
     margin: 50px auto;
     display: none;
+    image-rendering: pixelated;
 }
 
 #barf-gif {
@@ -273,6 +275,7 @@ a {
     left: 0;
     right: 0;
     z-index: 3;
+    image-rendering: pixelated;
 }
 
 #barf {
@@ -282,6 +285,7 @@ a {
     left: 100px;
     bottom: 100px;
     z-index: 2;
+    image-rendering: pixelated;
 }
 
 
@@ -290,6 +294,7 @@ a {
     top: 0;
     left: 0;
     display: none;
+    image-rendering: pixelated;
 }
 
 #background {
@@ -299,6 +304,7 @@ a {
     top: -38px;
     animation: animatedBackground 4s linear infinite;
     z-index: 0;
+    image-rendering: pixelated;
 }
 
 .grndEnemy {
@@ -315,6 +321,7 @@ a {
     width: 48px;
     right: -50px;
     z-index: 3;
+    image-rendering: pixelated;
 }
 
 #score {
@@ -326,12 +333,14 @@ a {
     top: -30px;
     display: none;
     z-index: 4;
+    image-rendering: pixelated;
 }
 
 .hearts {
     height: 74px;
     width: 74px;
     position: absolute;
+    image-rendering: pixelated;
 }
 
 #hrt0 {
@@ -353,12 +362,14 @@ a {
     margin: 10px auto;
     height: 300px;
     width: auto;
+    image-rendering: pixelated;
 }
 
 #againT {
     margin: -10px auto;
     height: 150px;
     width: auto;
+    image-rendering: pixelated;
 }
 
 @keyframes animatedBackground {
